assets/css/styles.css
/* ... */
.add-to-cart-anim.add button.adding .error {
  @apply translate-y-16;
}

.add-to-cart-anim.add button.added span {
  @apply -translate-y-full;
}
.add-to-cart-anim.add button.added .success {
  @apply opacity-100 translate-y-0;
}

.product-add-to-cart .add button.failed {
  @apply bg-require;
}
.product-add-sample .add button.failed {
  @apply bg-main-dark/50 animate-pulse;
}

.add-to-cart-anim.add button.failed span {
  @apply -translate-y-full bg-main-dark;
}
.add-to-cart-anim.add button.failed .error {
  @apply opacity-100 translate-y-0;
}

.product-add-sample .add-to-cart-anim.add button.added,
.product-add-sample .add-to-cart-anim.add button.success,
.product-add-sample .add-to-cart-anim.add button.adding {
  @apply bg-main-dark;
}

.page-product #blockcart-modal.modal.fade .modal-dialog {
  @apply translate-y-0;
}

body .loader {
  animation: fadeIn 0.5s ease-in-out forwards;
  z-index: 9999;
}

.page-cms.cms-id-25 .page-header h1,
.page-cms.cms-id-26 .page-header h1 {
  @apply max-w-lg mx-auto text-center;
}

[data-product-configurable='container'] .product-part img {
  @apply opacity-40 transition duration-200;
  -webkit-user-drag: none;
}

[data-product-configurable='container'] .product-part:hover img {
  @apply desktop-presta:opacity-70 transition duration-200;
}

[data-product-configurable='container'] .product-part.selected img {
  @apply opacity-100;
}

[data-product-configurable='container'] .product-part.selected:hover img {
  @apply opacity-100;
}

[data-product-configurable='container'] .swiper-wrapper .swiper-slide .size {
  @apply w-8;
}

[data-product-configurable='container'] .product-part.selected .part-name,
[data-product-configurable='container'] .product-part.selected .part-size {
  @apply opacity-100;
}

.modal .add-to-cart-anim.add button[disabled] {
  @apply cursor-not-allowed;
}

.floating-bar .product-prices div {
  @apply flex-wrap;
}

.floating-bar .product-prices .product-price {
  @apply text-2xl tablet:text-4xl;
}

#productConfigurable .regular-price {
  display: none;
}

.marquee-wrapper {
  animation: marquee 20s linear infinite;
}

#search_filters .facet [data-target='#facet_attribute_group_18'] {
  display: none;
}

.product-thumb-images .swiper-button-disabled {
  display: none;
}

.product-thumb-images-pag.swiper-pagination.swiper-pagination-bullets-dynamic {
  display: block;
}

img[src=''],
img:not([src]) {
  visibility: hidden;
}
.language-selector input:checked + label img,
.currency-selector input:checked + label .currency-sign {
  @apply border-main;
}

.popup-hidden:not(.is-active) {
  @apply opacity-0 pointer-events-none z-0;
}

.popup-hidden .shopswitch-modal {
  @apply transform -translate-y-2.5;
}

.language-selector input:checked + label .check,
.currency-selector input:checked + label .check {
  @apply scale-100 opacity-100;
}

.link-hidden a {
  @apply !hidden;
}

.widget-closed .dropdown-widget-inner{
  @apply hidden tablet-medium:!block;
}

.off-canvas-nav-megamenu .mega-col{
  @apply !min-h-0
}

.fancybox-title-float-wrap{
  @apply top-[calc(100%_+_10px)];
}

.fancybox-title {
  @apply !w-full !right-0 !left-0 px-12
}

.fancybox-title-float-wrap span.child{
  @apply whitespace-normal !mr-0;
}

.fancybox-nav.fancybox-prev{
 @apply !w-10 !h-10 bottom-[-65px] -left-5
}

.fancybox-nav.fancybox-next{
 @apply !w-10 !h-10 bottom-[-65px] -right-5
}

.fancybox-nav.fancybox-prev span::before{
 font-family: 'themify';
 line-height: 1;
 content: "\e629";
}

.fancybox-nav.fancybox-next span::before{
 font-family: 'themify';
 line-height: 1;
 content: "\e628";
}

.fancybox-nav span {
  @apply justify-center items-center flex w-10 h-10 text-main-dark bg-gray-1000 hover:bg-main-dark hover:text-white rounded-full transition
}

